Bug 515189 - "Failed connection" message on successful connection
Summary: "Failed connection" message on successful connection
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Bluetooth widget (other bugs)
Version First Reported In: 6.5.5
Platform: CachyOS Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2026-01-28 04:57 UTC by Fernando Marcelino Muniz
Modified: 2026-03-17 14:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.1
Sentry Crash Report:


Attachments
Issue in Plasma 6.5.5 (287.24 KB, image/png)
2026-01-28 04:57 UTC, Fernando Marcelino Muniz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2026-01-28 04:57:26 UTC
Created attachment 188977 [details]
Issue in Plasma 6.5.5

STEPS TO REPRODUCE
1. Failed connection a bunch of times while the device was charging.
2. Connected to the device.

OBSERVED RESULT
Failed connection successfully connected.

EXPECTED RESULT
This message should simply be made impossible in the code.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux 
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.18.7-2-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-11300H @ 3.10GHz
Memory: 9 GB of RAM (8.1 GB usable)
Graphics Processor 1: Intel® Iris® Xe Graphics
Graphics Processor 2: NVIDIA GeForce GTX 1650
Manufacturer: LENOVO
Product Name: 82MG
System Version: IdeaPad Gaming 3 15IHU6

ADDITIONAL INFORMATION
Aggravates Bug 515090
Comment 1 Fernando Marcelino Muniz 2026-02-02 01:37:03 UTC
Seems like this happens when you try to connect to the device after 5 minutes (when the device gives up waiting for a connection)
Comment 2 Bug Janitor Service 2026-02-09 12:36:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/245
Comment 3 Bug Janitor Service 2026-02-11 20:03:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/247
Comment 4 cwo 2026-02-21 10:18:48 UTC
Git commit f4b2aa190a1848f568198b924ef61beda224934f by Christoph Wolk.
Committed on 21/02/2026 at 10:18.
Pushed by cwo into branch 'Plasma/6.6'.

applet: don't show connection failure when connected

The model's ConnectionFailed property is only updated when we initiate
the connection manually. This means that if we fail to connect to the
device (e.g. because it's off) and later it connects automatically (e.g.
because it was turned on), ConnectionFailed will still be set, and the
widget will show "Connection failed" on something that is in the
connected section.

Once we're connected, previous failures are no longer relevant, so only
show it if we're not connected.
FIXED-IN: 6.6.1

----

6.6 only; !247 is a cleaner solution but is a more complicated change that's better for 6.7

M  +1    -1    src/applet/qml/DeviceItem.qml

https://invent.kde.org/plasma/bluedevil/-/commit/f4b2aa190a1848f568198b924ef61beda224934f
Comment 5 cwo 2026-03-17 14:40:13 UTC
Git commit 4175758491b199449d3b6888d7d7dbac2eb04320 by Christoph Wolk.
Committed on 17/03/2026 at 14:32.
Pushed by cwo into branch 'master'.

applet/devicesstateproxymodel: update connectionFailed on connect

DevicesStateProxyModel tracks connection failure, but only for manually
initiated connections. If the attempt fails, but a subsequent automatic
connection attempt succeeds, the data will not be updated and the applet
will still indicate that the connection failed even while obviously in
the connected section.

Instead, we track when the model changes a device, see if it's connected
and has connectionFailure set, and clear it if necessary. We also make
sure to not set connectionFailure if a connection attempt fails because
we're already connected to that device.

M  +16   -1    src/applet/devicesstateproxymodel.cpp
M  +1    -0    src/applet/devicesstateproxymodel.h

https://invent.kde.org/plasma/bluedevil/-/commit/4175758491b199449d3b6888d7d7dbac2eb04320