applet/devicesstateproxymodel: update connectionFailed on connect

DevicesStateProxyModel tracks connection failure, but only for manually
initiated connections. If the attempt fails, but a subsequent automatic
connection attempt succeeds, the data will not be updated and the applet
will still indicate that the connection failed even while obviously in
the connected section.

Instead, we track when the model changes a device, see if it's connected
and has connectionFailure set, and clear it if necessary. We also make
sure to not set connectionFailure if a connection attempt fails because
we're already connected to that device.

BUG: 515189